--- a/index.html
+++ b/index.html
@@ -31,5 +31,48 @@
     </ul>
   </nav>
  </header>
+ <section class="home" id="home">
+  <div class="home-content">
+    <h3>Hey! I'm</h3>
+    <h1><span class="bakaFont">Imteaj Alam Monna</span></h1>
+    <h3>And I'm a <span class="multiple-text"></span></h3>
+    <p>
+      Hi! Thanks for visiting my portfolio. I am a junior web developer. I
+      work with honesty and dedication. Let your website creation journey
+      begin with me. I will try my best to win you over.grow your business
+      with us.
+    </p>
+    <div class="social-media">
+      <a href="https://web.facebook.com/" target="_blank"
+        ><i class="bx bxl-facebook-circle"></i
+      ></a>
+      <a href="https://www.instagram.com/"
+        ><i class="bx bxl-instagram"></i
+      ></a>
+      <a
+        href="https://www.youtube.com/channel/UCmqM9MJMAybSmfBG-JHvNlg"
+        target="_blank"
+        ><i class="bx bxl-youtube"></i
+      ></a>
+      <a
+        href="https://www.linkedin.com/in/imteaj-alam-monna/"
+        target="_blank"
+        ><i class="bx bxl-linkedin"></i
+      ></a>
+    </div>
+    <button class="glowing-btn" onmousedown="mouseClick.play()">
+      <span class="glowing-txt w-span"
+        >Down<span class="faulty-letter w-span">load </span> Certificate </span
+      >
+    </button>
+    <!-- <a target="_blank" href="images/cv.jpg" class="btn">Download Certificate</a> -->
+  </div>
+  <div class="home-img">
+    <img src="images/banner.JPG" alt="" class="topup1" />
+    <img src="images/monna 2.JPG" alt="" class="topup" />
+  </div>
+</section>
+
+<script src="app.js"></script>
 </body>
 </html>
